syntax = "proto3";

option csharp_namespace = "ChatClient";

import "google/protobuf/Empty.proto";

package chat;

service MessengerService{
	rpc SendMessage(SendRequest) returns (SendResponse);
	rpc GetMessages(GetMessagesRequest) returns (stream GetMessagesResponse);

	rpc SendUser(SendUserRequest) returns (SendUserResponse);
	rpc GetUsers(GetUserRequest) returns (stream GetUsersResponse);

	rpc SendDisconnectedUser(SendDisconnectedRequest) returns (SendDisconnectedResponse);
	rpc GetDisconnectedUsers(GetDisconnectedUsersRequest) returns (stream GetDisconnectedUsersResponse);
}


message SendRequest{
	string from=1;
	string text=2;
}

message SendResponse{

}

message GetMessagesRequest{

}

message GetMessagesResponse{
	string from=1;
	string text=2;
}

message SendUserRequest{
	string username=1;
}

message SendUserResponse{

}

message SendDisconnectedRequest{
	string username=1;
}

message SendDisconnectedResponse{

}

message GetDisconnectedUsersRequest{

}

message GetDisconnectedUsersResponse{
	string username=1;
}

message GetUserRequest{

}

message GetUsersResponse{
	string username=1;
}




message User{
	int32 id = 1;
	string name = 2;
}

message Message{
	string text = 1;
	User user = 2;
}